# AndreaGepponiLab

./: CMakeLists.txt  Date.cpp  Date.h  Note.cpp  Note.h  NoteList.cpp  NoteList.h  Testo.txt  main.cpp
test/: CMakeLists.txt  Constructor.txt  DateTest.cpp  NoteListTest.cpp  NoteTest.cpp  Save.txt  runAllTests.cpp
